--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,32 +4,42 @@ on:
   push:
     tags:
       - 'v*'
+    branches:
+      - main  # 添加分支触发
 
 jobs:
   build:
     runs-on: windows-latest
     
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4  # 更新到 v4
     
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5  # 更新到 v5
       with:
-        python-version: '3.9'
+        python-version: '3.12'  # 更新到 3.12
     
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install cx_Freeze PySide6 openpyxl
+        pip install -r requirements.txt
     
     - name: Build executable
-      run: python setup.py build
+      run: |
+        pyinstaller --onefile --windowed --icon=resources/icon.ico main.py
     
     - name: Create release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
         files: |
-          build/exe.win-amd64-3.9/供应商数据智能匹配系统.exe
+          dist/main.exe
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Upload artifact
+      if: "!startsWith(github.ref, 'refs/tags/')"  # 非标签推送时上传构建产物
+      uses: actions/upload-artifact@v4
+      with:
+        name: PanDataone
+        path: dist/main.exe
